# notely

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.toml.example  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
demos/: note-capture.cast  search-and-chat.cast  todo-add.cast
docs/: ARCHITECTURE.md
src/notely/: README.md  __init__.py  ai.py  cli.py  config.py  dates.py  db.py  dedup.py  files.py  mcp_server.py  models.py  onboarding.py  prompts.py  routing.py  secrets.py  storage.py  templates.py  timer.py  vectors.py  web.py
src/notely/commands/: README.md  __init__.py  dump.py  edit.py  ideas.py  init.py  list_cmd.py  query_cmd.py  reindex.py  search_cmd.py  show.py  spaces.py  todo.py
src/notely/commands/open_cmd/: __init__.py  _agent.py  _completers.py  _database_mode.py  _handlers.py  _inbox.py  _input.py  _session.py  _shared.py  _todo_mode.py
tests/: conftest.py  test_config.py  test_dates.py  test_db_core.py  test_db_helpers.py  test_dedup.py  test_prompts.py  test_routing.py  test_storage.py  test_timer.py  test_todo_mode.py  test_vectors_escape.py
