[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notely"
version = "0.2.0"
description = "Structured note system for AI-powered retrieval. Paste anything, AI organizes it."
license = "MIT"
readme = "README.md"
authors = [{name = "Chloe Liu"}]
requires-python = ">=3.10"
keywords = ["notes", "ai", "knowledge-management", "markdown", "mcp", "claude", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "click>=8.1,<9",
    "rich>=13.0,<14",
    "anthropic>=0.40,<1",
    "pydantic>=2.0,<3",
    "python-frontmatter>=1.0,<2",
    "python-slugify>=8.0,<9",
    "mcp[cli]>=1.0,<2",
    "prompt-toolkit>=3.0,<4",
    "lancedb>=0.20,<1",
    "fastembed>=0.5,<1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/chloeliu/notely"
Documentation = "https://github.com/chloeliu/notely/blob/main/docs/ARCHITECTURE.md"
Repository = "https://github.com/chloeliu/notely"
Issues = "https://github.com/chloeliu/notely/issues"

[project.optional-dependencies]
pdf = ["pymupdf4llm>=0.0.10,<1", "pymupdf>=1.23,<2"]
web = ["firecrawl-py>=1.0,<2"]
dev = ["pytest>=8.0,<9", "pytest-cov>=5.0,<6", "ruff>=0.8,<1"]

[project.scripts]
notely = "notely.cli:cli"
notely-mcp = "notely.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter if needed
    "E402",   # module level import not at top — common in CLI tools
    "E741",   # ambiguous variable name — false positives on short names
    "F401",   # unused imports — some are re-exports
    "F541",   # f-string without placeholders — intentional in some prompts
    "F811",   # redefinition of unused name — from conditional imports
    "F821",   # undefined name — false positives from `from __future__ import annotations`
    "F823",   # undefined local — false positives from late binding
    "F841",   # unused variable — some are for side-effect assignments
]

[tool.setuptools.packages.find]
where = ["src"]
